RailsTeste/SISLETRON/app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

*{

}

html{
  height: 100%;
  width: 100%;
}

body{
  margin: 0px;
  height: 100%;
  width: 100%;
  background-color: #fbfbfb;
}

#error{
  color: red;
}

h1.title{
  font-family: 'Roboto', sans-serif;
  font-size: 60pt;
  margin-bottom: -20px;
  color: #666699;
  text-align: center;
}

h2.title{
  color: #666699;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  font-size: 23pt;
}

#top{
  width: 100%;
  height: 40px;
  background-color: #fff;
  border-bottom: 2px solid #ccc;
}

#top-container{
  width: 100%;
  height: 60px;
  margin:auto;
}

#title-top{
  font-family: 'Roboto', sans-serif;
  font-size: 14pt;
  margin: auto;
  padding-top: 10px;
  max-width: 0;
}

#login-box{
  float: right;
  text-align: right;
}

.login-text{
  margin-right: 50px;
  margin-top: -20px;
  color: #777;
  font-family: 'Montserrat', sans-serif;
  font-size: 10pt;
}

#container{
  width: auto;
  height: 100%;
  margin: auto;
}

#content{
  margin-top: 25px;
  width: auto;
  height: auto;
  float: left;
  margin-left: 25px;
}

#main-content{
  width: 100%;
  float: right;
  position: relative;
}

a.title-top, a.title-top:visited{
  color: #666699;
}

a, a:visited{
  text-decoration: none;
  color: #4f4f4f;
}

a:hover{
  color: indigo;
}


a.create{
  width: auto;
  padding: 8px;
  height: 18px;
  background-color: #efefef;
  color: #666699;
  border: solid 1px #e0e0e0;
  border-radius: 7px;
}

a.create:HOVER{
  color: slateblue;
  background-color: #fff;
}

#alert, #notice{
  background-color: #efefef;
  border: 1px solid #e0e0e0;
  border-radius: 7px;
  text-align: center;
  padding: 5px;
  margin: auto;
  margin-bottom: 30px;
  height: 20px;
  width: 500px;
  color: #EB2F32;
}


#side-menu{
  float: left;
  width: 220px;
  height: 100%;
  color: #777;
  border-right: 2px solid #e9e9e9;
  display: block;
  position: relative;
}

#side-menu>ul{
  list-style-type: none;
}

a.menu-link{
  font-size: 10pt;
  color: #777;
  font-family: 'Montserrat', sans-serif;
  display: inline;
  margin-bottom: 7px;
}

a.menu-link:hover{
  color: slateblue;
}

.side-link{
  display: inline-block;
  height: 40px;
  width: 100%;
}

.side-link:hover{
  background-color: #F5F5F5;
}

.side-link>p{
  display: inline;
  position: relative;

}

.icon{
  width: 15px;
  height: 15px;
  display: inline;
  margin-left: 20px;
  margin-top: 10px;
  margin-bottom: -1px;
  margin-right: 15px;
}



/*

-------------------------------------------------

*/

/* Basic Grey */
.basic-grey {
    margin-left:auto;
    margin-right:auto;
    max-width: 500px;
    background: #F7F7F7;
    padding: 25px 15px 25px 10px;
    font: 16px Georgia, "Times New Roman", Times, serif;
    color: #888;
    text-shadow: 1px 1px 1px #FFF;
    border:1px solid #E4E4E4;
}
.basic-grey h1 {
    font-size: 25px;
    padding: 0px 0px 10px 40px;
    display: block;
    border-bottom:1px solid #E4E4E4;
    margin: -10px -15px 30px -10px;;
    color: #888;
}
.basic-grey h2 {
    font-size: 25px;
    padding: 10px 0px 10px 40px;
    display: block;
    border-top:1px solid #E4E4E4;
    border-bottom:1px solid #E4E4E4;
    margin: 30px -15px 10px -10px;;
    color: #888;
}
.basic-grey h1>span {
    display: block;
    font-size: 13px;
}
.basic-grey h2>span {
    display: block;
    font-size: 13px;
}
.basic-grey label {
    display: block;
    margin: 0px;
}
.basic-grey label>span {
    float: left;
    width: 20%;
    text-align: right;
    padding-right: 10px;
    margin-top: 10px;
    color: #888;
}
.basic-grey form input, .basic-grey textarea, .basic-grey select {
    border: 1px solid #DADADA;
    display: block;
    color: #888;
    height: 30px;
    margin-bottom: 16px;
    margin-right: 6px;
    margin-top: 2px;
    outline: 0 none;
    padding: 3px 3px 3px 5px;
    width: 70%;
    line-height:15px;
    box-shadow: inset 0px 1px 4px #ECECEC;
    -moz-box-shadow: inset 0px 1px 4px #ECECEC;
    -webkit-box-shadow: inset 0px 1px 4px #ECECEC;
}
.basic-grey textarea{
    padding: 5px 3px 3px 5px;
}
.basic-grey select {
    background: #FFF url('down-arrow.png') no-repeat right;
    background: #FFF url('down-arrow.png') no-repeat right);
    appearance:none;
    -webkit-appearance:none;
    -moz-appearance: none;
    text-indent: 0.01px;
    text-overflow: '';
    width: 70%;
    height: 35px;
    line-height: 25px;
}
.basic-grey textarea{
    height:100px;
}

.basic-grey form input.form-btn {
    background: #E27575;
    border: none;
    padding: 10px 25px 10px 25px;
    color: #FFF;
    box-shadow: 1px 1px 5px #B6B6B6;
    border-radius: 3px;
    text-shadow: 1px 1px 1px #9E3F3F;
    cursor: pointer;
}
.basic-grey form input.form-btn:hover {
    background: #CF7A7A
}


.checkbox_container {
  display: inline-block;
  vertical-align: -1px;
  margin: 5px;
  border-bottom: 1px solid #e9e9e9;
  width: 500px
 }
.checkbox_container input {
  display: inline;
  float: right;
  width: 15px !important;
 }

span.checkbox_container:hover{
  background-color: #red;
}

.checkbox_container .collection_check_boxes{
  display: inline;
  vertical-align: -5px;
 }

